# BE-Alert-BIN-Convertor-xlsx-to-csv

./: Cargo.toml  README.md  build.rs  cargo.toml
.github/workflows/: main.yml
assets/: Handleiding.key  app.icns
src/: main.rs
ui/: main.slint
workflows/: buildd.yml
