[package]
name = "BIN-ALKEN-Convertor"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.6"
calamine = "0.25"
csv = "1.3"
rfd = "0.14"
anyhow = "1.0"


[build-dependencies]
slint-build = "1.6"
winres = "0.1"

[package.metadata.bundle]
name = "BIN-ALKEN-Convertor"
identifier = "be.tools4video.binconvertor"
icon = ["assets/AppIcon.icns"]
category = "public.app-category.utilities"